# Agent_Office_Dashboard

./: .gitignore  .npmrc  index.html  package.json  pnpm-lock.yaml  run-dev.bat  stop-dev.bat  tsconfig.base.json  tsconfig.json  에이전트_학습.md
docs/: README.md  agents-tab-spec.md  character-appearance-impl-plan.md  character-appearance-spec.md  design-docs-fix-plan.md  event-schema.md  follow-up-fix-plan.md  global-hooks-template.json  global-setup-checklist.md  hooks-onboarding.md  hooks-quickstart.md  implementation-plan.md  mascot-architecture.md  mascot-hooks-integration.md  mascot-ipc-protocol.md  mascot-product-spec.md  mascot-spine-spec.md  mascot-state-machine.md  office-behavior-spec.md  office-layout-spec.md  open-questions.md  operations-first-ux-checklist.md  performance-targets.md  plan-thought-bubbles.md  product-spec.md  project-brief.md  session-routing.md  settings-spec.md  state-machine.md  system-architecture.md  time-travel-spec.md  ui-art-direction.md  working-set.md  오피스-오브젝트-목록.md  코드베이스-진단-개선-리포트.md  클로드의 추가의견.md
scripts/: smoke-e2e.mjs
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  mod.rs  window.rs
src-tauri/src/http/: ingest.rs  server.rs
src-tauri/src/models/: agent.rs  event.rs  mod.rs
src-tauri/src/services/: appearance.rs  cursor_poll.rs  heartbeat.rs  mod.rs  normalizer.rs  state_machine.rs
src-tauri/src/storage/: agents_repo.rs  db.rs  events_repo.rs  mod.rs  settings_repo.rs  state_repo.rs
src-tauri/src/tray/: mod.rs
(+171 files in other folders)
